gap fixes in contact form

--- a/src/app/components/contact/contact.component.scss
+++ b/src/app/components/contact/contact.component.scss
@@ -143,7 +143,6 @@
 .form-row {
   display: grid;
   grid-template-columns: 1fr;
-  gap: 1rem;
 }
 
 .field {
